fix(BottomSheet): change bottom sheet handle color on dark mode

--- a/packages/bottom-sheets/src/BottomSheet.dark.scss
+++ b/packages/bottom-sheets/src/BottomSheet.dark.scss
@@ -3,6 +3,9 @@
     --v-bottom-sheet-bg-color: theme('colors.neutral.900');
     --v-bottom-sheet-body-color: theme('colors.neutral.200');
 
+    // handle
+    --v-bottom-sheet-handle-bg-color: theme('colors.neutral.600');
+
     &-close-icon {
       @apply text-neutral-300 hover:text-neutral-100;
     }
